# aws/api/api.yml
@@ -6,6 +6,17 @@ info:
   description: Tsuki backend API
 
 paths:
+  /stream/playable:
+    post:
+      operationId: getPlayableUrl
+      x-amazon-apigateway-integration:
+        httpMethod: POST
+        type: aws_proxy
+        payloadFormatVersion: "2.0"
+        uri: ${LAMBDA_URI_STREAMER}
+      responses:
+        "200":
+          description: OK
   /health:
     get:
       operationId: healthCheck
